Fixed alignment issues when changing browser size

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ html,body {
     display: flex;
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 50px;
+    justify-content: center;
 }
 
 .blue-button {
@@ -48,27 +49,27 @@ html,body {
     padding-right: 25px;
     padding-top: .1px;
     padding-bottom: .1px;
-    margin-left: 210px;
+    margin-left: 100px;
 }
 
 .image-placeholder {
     color: lightgray;
-    background-color: rgb(123, 123, 123);
-    width: 400px;
+    background-color: rgb(123, 123, 123); 
     text-align: center;
     font-size: 13px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 50px;
     margin-left: 60px;
     margin-top: 60px;
+    margin-right: 75px;
 }
 
 .header-text {
     color: darkgray;
-    margin-left: 210px;
+    margin-left: 100px;
+    margin-right: 15px;
 }
 
 .main-header {
     font-size: 25px;
-    margin-left: 210px;
+    margin-left: 100px;
 }
